@@ -512,8 +512,8 @@ header {
                 color: #colours[close]; cursor: pointer; display: flex;
                 font-family: #fonts[system]; font-size: smaller;
                 font-weight: bold; height: 100%; padding: 0 0.25rem;
-                img {
-                    height: 16px; width: 16px; vertical-align: middle;
+                img, svg {
+                    height: 20px; width: 20px; vertical-align: middle;
                 }
             }
             .modal-close:hover {
